Believe Section Completed

--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta Tag -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Site Title -->
     <title>New Year New Me</title>
+    <!-- CSS -->
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+
+    <main>
+        <!-- Bannar Section -->
+        <section id="believe">
+            <article class="believe container">
+                <h1 class="believe-title">All Thinks Are<br>Possible If You<br>believe</h1>
+                <p class="believe-description">There are many variations of passages of Lorem Ipsum <br>
+                    available, but the majority have suffered alteration in some <br>
+                    form, by injected humour, or randomised words
+                </p>
+                <button class="believe-button">Contact Us</button>
+            </article>
+        </section>
+
+    </main>
+
+    <footer></footer>
 </body>
 </html>
