Failures Section Completed

--- a/index.html
+++ b/index.html
@@ -25,8 +25,43 @@
             </article>
         </section>
 
+        <!-- Failures Section -->
+
+        <section id="failures">
+            <article class="failures container">
+                <article class="failures-image">
+                    <img src="./images/person.png" alt="Person Image">
+                </article>
+                <article class="failures-text">
+                    <h2 class="failures-title">My failures of<br>previous year</h2>
+                    <p class="failures-description">
+                        Contrary to popular belief, Lorem Ipsum is not<br>
+                        simply random text. It has roots in a piece of<br>
+                        classical Latin literature from 45 BC, making it over<br>
+                        2000 years old. Richard McClintock.
+                    </p>
+                    <article class="failures-list">
+                        <article class="list-item">
+                            <i class="fa-solid fa-check"></i><span>Contrary to popular belief, is not simply.</span>
+                        </article>
+                        <article class="list-item">
+                            <i class="fa-solid fa-check"></i><span>Contrary to popular belief.</span>
+                        </article>
+                        <article class="list-item"><i class="fa-solid fa-check"></i><span>Contrary to popular , is not simply.</span></article>
+                        <article class="list-item"><i class="fa-solid fa-check"></i><span>Contrary to popular belief, is not simply.</span></article>
+                        <article class="list-item"><i class="fa-solid fa-check"></i><span>Contrary to popular simply</span></article>
+                    </article>
+                </article>
+            </article>
+        </section>
+
     </main>
 
     <footer></footer>
+
+
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/a49556df0c.js" crossorigin="anonymous"></script>
 </body>
 </html>
