--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <article class="failures-image">
                     <img src="./images/person.png" alt="Person Image">
                 </article>
-                <article class="failures-text">
+                <article class="failures-info">
                     <h2 class="failures-title">My failures of<br>previous year</h2>
                     <p class="failures-description">
                         Contrary to popular belief, Lorem Ipsum is not<br>
@@ -50,6 +50,52 @@
                         <article class="list-item"><i class="fa-solid fa-check"></i><span>Contrary to popular , is not simply.</span></article>
                         <article class="list-item"><i class="fa-solid fa-check"></i><span>Contrary to popular belief, is not simply.</span></article>
                         <article class="list-item"><i class="fa-solid fa-check"></i><span>Contrary to popular simply</span></article>
+                    </article>
+                </article>
+            </article>
+        </section>
+
+        <!-- Plans Section -->
+
+        <section id="plans">
+            <article class="plans container">
+                <h2 class="plans-title">My Plans</h2>
+                <article class="my-plans-container">
+                    <article class="plans-item">
+                        <article class="plans-item-img">
+                            <img src="./images/icons/web.png" alt="Web Icon">
+                        </article>
+                        <article class="plans-item-info">
+                            <h4>Web Development</h4>
+                            <p>I want to start</p>
+                        </article>
+                    </article>
+                    <article class="plans-item">
+                        <article class="plans-item-img">
+                            <img src="./images/icons/js.png" alt="Javascript Icon">
+                        </article>
+                        <article class="plans-item-info">
+                            <h4>Javascript</h4>
+                            <p>I want to learn</p>
+                        </article>
+                    </article>
+                    <article class="plans-item">
+                        <article class="plans-item-img">
+                            <img src="./images/icons/smoke.png" alt="Smoking Icon">
+                        </article>
+                        <article class="plans-item-info">
+                            <h4>Smoking Habit</h4>
+                            <p>I want to end</p>
+                        </article>
+                    </article>
+                    <article class="plans-item">
+                        <article class="plans-item-img">
+                            <img src="./images/icons/ecom.png" alt="Ecommerce Cart Icon">
+                        </article>
+                        <article class="plans-item-info">
+                            <h4>ecommerce</h4>
+                            <p>I want to develop</p>
+                        </article>
                     </article>
                 </article>
             </article>
