Call Now Section Completed

--- a/index.html
+++ b/index.html
@@ -101,6 +101,16 @@
             </article>
         </section>
 
+
+        <!-- Get In Touch Section -->
+
+        <section id="call-now" class="container">
+            <article class="call-now-info">
+                <h3>Awlays keep a positive<br>mindset</h3>
+                <button class="call-now-button">Call Now</button>
+            </article>
+        </section>
+
     </main>
 
     <footer></footer>
