--- a/index.html
+++ b/index.html
@@ -113,7 +113,33 @@
 
     </main>
 
-    <footer></footer>
+    <!-- Footer Section -->
+
+    <footer id="footer">
+        <article class="footer-container container">
+            <article class="footer-info">
+                <h2 class="footer-title">Future</h2>
+                <p class="footer-description">
+                    There are many variations of passages of Lorem Ipsum<br>
+                    available, but the majority have suffered alteration in some<br>
+                    form, by injected humour, or randomised words
+                </p>
+                <p class="contact-email">Email : info@gmail.com</p>
+                <p class="contact-phone-number">Phone : 01500 00 00 00</p>
+                <article class="footer-social-icon">
+                    <img src="./images/icons/fb.png" alt="Facebook Icon">
+                    <img src="./images/icons/twitter.png" alt="Twitter Icon">
+                    <img src="./images/icons/youtube.png" alt="Youtube Icon">
+                </article>
+            </article>
+
+            <article class="subscribe">
+                <h3 class="subscribe-title">Subscribe</h3>
+                <input type="email" placeholder="Enter your email">
+                <button class="subscribe-button" type="submit">Subscribe</button>
+            </article>
+        </article>
+    </footer>
 
 
 
